revised generation of DAOs