@@ -1,31 +1,59 @@
 package edu.wpi.punchy_pegasi.backend;
 
+import edu.wpi.punchy_pegasi.backend.generated.EdgeDaoImpl;
+import edu.wpi.punchy_pegasi.backend.generated.FoodServiceRequestEntryDaoImpl;
+import edu.wpi.punchy_pegasi.backend.generated.LocationNameDaoImpl;
 import edu.wpi.punchy_pegasi.frontend.FoodServiceRequestEntry;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Random;
+import java.util.UUID;
 
 @Slf4j
 public class TestDB {
     public static TestDB singleton = new TestDB();
+    @Getter
+//    PdbController pdb = new PdbController("jdbc:postgresql://database.cs.wpi.edu:5432/teampdb",
+//            "teamp", "teamp130");
+    PdbController pdb = new PdbController("jdbc:postgresql://bruellcarlisle.dyndns.org:54321/softeng",
+            "teamp", "teamp130");
 
     public static TestDB getSingleton() {
         return singleton;
     }
 
-    @Getter
-    PdbController pdb = new PdbController("jdbc:postgresql://database.cs.wpi.edu:5432/teampdb",
-            "teamp", "teamp130");
-
     public static void main(String[] args) {
         try {
+            singleton.pdb.initTableByType(PdbController.TableType.LOCATIONNAMES);
+            var LocationNameDAO = new LocationNameDaoImpl();
+            LocationNameDAO.save(new LocationName(UUID.randomUUID(), "test", "test", LocationName.NodeType.EXIT));
+            var locationNameMap = LocationNameDAO.getAll();
+
+            singleton.pdb.initTableByType(PdbController.TableType.EDGES);
+            var EdgeDAO = new EdgeDaoImpl();
+            EdgeDAO.save(new Edge(new Random().nextLong(), "test", "test"));
+            var edgeMap = EdgeDAO.getAll();
+
+            // same thing but for FlowerDeliveryServiceRequest
             singleton.pdb.initTableByType(PdbController.TableType.FOODREQUESTS);
-            new FoodServiceRequestDaoImpl().save(new FoodServiceRequestEntry("test", "test", "test", "test", "test",
-                    List.of(new String[]{"test", "test", "test"}), "test"));
+            var FoodServiceRequestEntryDAO = new FoodServiceRequestEntryDaoImpl();
+            FoodServiceRequestEntryDAO.save(new FoodServiceRequestEntry(UUID.randomUUID(),
+                    "test",
+                    "test",
+                    "test",
+                    "test",
+                    "test",
+                    Arrays.asList("test", "test2"),
+                    "test"
+            ));
+            var foodServiceRequestEntryMap = FoodServiceRequestEntryDAO.getAll();
+            System.out.println();
         } catch (PdbController.DatabaseException e) {
             log.error(e.getMessage());
         }
+
 //        try {
 //            pdb.importTable(PdbController.TableType.NODES, "C:\\Documents\\p2\\Node.csv");
 //            pdb.importTable(PdbController.TableType.EDGES, "C:\\Documents\\p2\\Edge.csv");
